<resources>
    <string name="app_name">Cultural Adriod App</string>
    <string name="user">User Name</string>
    <string name="evoe">Evoé</string>
    <string name="password">Password</string>
    <string name="createUser">New User</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="cpf">Cpf</string>
    <string name="usrName">User Name</string>
    <string name="soreNome">Sobre Nome</string>
    <string name="senha">Senha</string>
    <string name="voltar">Voltar</string>
    <string name="salvar">Salvar</string>
</resources>
