<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.MainActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="100dp">
      <TextView
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:text="@string/evoe"
          android:layout_marginTop="25dp"
          android:id="@+id/tvContagem"
          />
      <Button
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:text="@string/createUser"
          android:onClick="newUser"
          android:id="@+id/newUser"/>


  </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:padding="10dp"
        android:id="@+id/userName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="10dp"
        android:id="@+id/password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"/>

</LinearLayout>